--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,18 @@
 # English strings go here for Rails i18n
 en:
-  # my_label: "My label"
+  bestest_timer:
+    activity: "Activity"
+    close: "Close"
+    comment: "Comment"
+    commit: "Punch out"
+    discard: "Discard"
+    logging_since: "Logging to %{descr} since %{time}"
+    need_rest_api: "Please check that 'Enable REST web service'' is\nenabled in Redmine Administration/Settings/API."
+    no_permission: "You do not have permission to log time to %{project}."
+    nothing_inferred: "Neither project nor issue could be inferred from current page."
+    notification_title: "Logged %{hours} hours to %{descr}"
+    plugin_name: "Bestest Punch Clock for Redmine"
+    recording: "(Logging)"
+    start: "Punch in"
+    state_descr_issue: "%{project}, issue #%{issue}"
+    state_descr: "%{project}"
