Added translation for time entry sumbit failures.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,3 +16,4 @@ en:
     start: "Punch in"
     state_descr_issue: "%{project}, issue #%{issue}"
     state_descr: "%{project}"
+    submit_failed: "Failed to log work shift to Redmine: %{error}"
