--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -16,3 +16,4 @@ sv:
     start: "Stämpla in"
     state_descr_issue: "%{project}, ärende #%{issue}"
     state_descr: "%{project}"
+    submit_failed: "Misslyckades med att skicka arbetspass till Redmine: %{error}"
