Use radio buttons for activity instead of select menu.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,4 +16,5 @@ en:
     start: "Punch in"
     state_descr_issue: "%{project}, issue #%{issue}"
     state_descr: "%{project}"
+    status: "Status"
     submit_failed: "Failed to log work shift to Redmine: %{error}"
