Fixed Swedish translation typo.

--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -2,7 +2,7 @@
 sv:
   bestest_timer:
     activity: "Aktivitet"
-    close: "Sträng"
+    close: "Stäng"
     comment: "Kommentar"
     commit: "Stämpla ut"
     discard: "Kasta"
