--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,7 @@ en:
     commit: "Punch out"
     discard: "Discard"
     logging_since: "Logging to %{descr} since %{time}"
-    need_rest_api: "Please check that 'Enable REST web service'' is\nenabled in Redmine Administration/Settings/API."
+    need_rest_api: "Please check that 'Enable REST web service' is\nenabled in Redmine Administration/Settings/API."
     no_permission: "You do not have permission to log time to %{project}."
     nothing_inferred: "Neither project nor issue could be inferred from current page."
     notification_title: "Logged %{hours} hours to %{descr}"
