--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,7 @@ en:
     recording: "(Logging)"
 
     details: "Details"
-    time: "Time:"
+    time: "Spent time:"
     project: "Project:"
     issue: "Issue:"
 
@@ -15,9 +15,9 @@ en:
 
     comment: "Comment"
 
-    close: "Close"
     commit: "Punch out"
     discard: "Discard"
+    close: "Close"
 
     logging_since: "Logging to %{descr} since %{time}"
     notification_title: "Logged %{hours} hours to %{descr}"
