--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1,6 +1,7 @@
 # Portuguese strings go here for Rails i18n
 "pt":
   bestest_timer:
+    # Please don't forget to translate the plugin name. ("Bestest" is "better than the best" in a grammatically incorrect way.)
     plugin_name: "Bestest Punch Clock for Redmine"
 
     start: "Contar"
@@ -26,5 +27,6 @@
 
     need_rest_api: "Por favor verifique a configuração 'Ativar serviços REST'' esta\nhabilitada no Redmine Administração/Configuração/API."
     no_permission: "Você não tem permissão para registrar o tempo para %{project}."
+    not_enabled: "Time tracking not enabled for %{project}."
     nothing_inferred: "Abra um projeto ou navegue até uma tarefa."
     submit_failed: "Falha ao registrar a tempo de trabalho para Redmine: %{error}"
