Nag requesters WIP.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,8 +22,13 @@ en:
 
     logging_since: "Logging to %{descr} since %{time}"
     notification_title: "Logged %{hours} hours to %{descr}"
+    should_punch_in_message: "You were last seen %{minutes} minutes ago."
+    should_punch_in_title: "Don't forget to punch in!"
+    should_punch_out_message: "You have not been seen for %{minutes} minutes, but are still logging time to %{descr}."
+    should_punch_out_title: "Still working?"
     state_descr_issue: "%{project}, issue #%{issue}"
     state_descr: "%{project}"
+    use_last_activity_time: "Use saved time for last activity (%{time})?"
 
     need_rest_api: "Please check that 'Enable REST web service' is\nenabled in Redmine Administration/Settings/API."
     no_permission: "You do not have permission to log time to %{project}."
