--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -22,8 +22,13 @@ sv:
 
     logging_since: "Loggar tid till %{descr} sedan %{time}"
     notification_title: "Loggade %{hours} timmar till %{descr}"
+    should_punch_in_message: "Du syntes senast till för %{minutes} minuter sedan."
+    should_punch_in_title: "Glöm inte att stämpla in!"
+    should_punch_out_message: "Du har inte synts till på %{minutes} minuter, men loggar fortfarande tid till %{descr}."
+    should_punch_out_title: "Jobbar du fortfarande?"
     state_descr_issue: "%{project}, ärende #%{issue}"
     state_descr: "%{project}"
+    use_last_activity_time: "Använd sparad tid för senaste aktivitet (%{time})?"
 
     need_rest_api: "Vänligen säkerställ att 'Aktivera REST webbtjänst' är\npåslaget i Redmines Administration/Inställningar/API."
     no_permission: "Du har inte rättighet att logga tid till %{project}."
