--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -22,6 +22,10 @@ it:
 
     logging_since: "Registrando tempo su %{descr} dalle %{time}"
     notification_title: "Segnate %{hours} ore a %{descr}"
+    should_punch_in_message: "You were last seen at %{time}."
+    should_punch_in_title: "Don't forget to punch in!"
+    should_punch_out_message: "You have not been seen since %{time}, but are still logging time to %{descr}."
+    should_punch_out_title: "Still working?"
     state_descr_issue: "%{project}, segnalazione #%{issue}"
     state_descr: "%{project}"
 
