--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -22,6 +22,10 @@
 
     logging_since: "Registrado para %{descr} desde %{time}"
     notification_title: "Trabalhado %{hours} horas para %{descr}"
+    should_punch_in_message: "You were last seen at %{time}."
+    should_punch_in_title: "Don't forget to punch in!"
+    should_punch_out_message: "You have not been seen since %{time}, but are still logging time to %{descr}."
+    should_punch_out_title: "Still working?"
     state_descr_issue: "%{project}, tarefa #%{issue}"
     state_descr: "%{project}"
 
