--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -22,6 +22,10 @@ ru:
 
     logging_since: "%{descr} с %{time}"
     notification_title: "Учтено %{hours} ч. для %{descr}"
+    should_punch_in_message: "You were last seen at %{time}."
+    should_punch_in_title: "Don't forget to punch in!"
+    should_punch_out_message: "You have not been seen since %{time}, but are still logging time to %{descr}."
+    should_punch_out_title: "Still working?"
     state_descr_issue: "%{project}, задача #%{issue}"
     state_descr: "%{project}"
 
