--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -5,7 +5,7 @@ it:
     plugin_name: "Il miglior Orologio Segnatempo per Redmine"
 
     start: "Registra tempo"
-    recording: "(Registrando)"
+    recording: "Registrando (%{hhmm})"
 
     details: "Dettagli"
     time: "Tempo impiegato:"
