--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -5,7 +5,7 @@ ru:
     plugin_name: "Учет времени"
 
     start: "Запустить учет времени"
-    recording: "(Ведется учет времени)"
+    recording: "Ведется учет времени (%{hhmm})"
 
     details: "Подробности"
     time: "Трудозатраты:"
